@@ -93,6 +93,7 @@ where XXXXXX is the bug number as listed below.
         unitialised value(s)"
 343967  Don't warn about setuid/setgid/setcap executable for directories
 343978  Recognize DWARF5/GCC5 DW_LANG_Fortran 2003 and 2008 constants
+344007  accept4 syscall unhandled on arm64 (242) and ppc64 (344)
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
